--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jellyjs-plugin-httpserver",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Jelly.js httpserver Plugin",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "mocha"
   },
   "repository": "",
   "keywords": [
@@ -16,7 +16,9 @@
   "dependencies": {
     "express": "~3.3.1"
   },
-  "devDependancies":{
-    "jellyjs":"0.x.x"
+  "devDependencies":{
+    "jellyjs":"0.x.x",
+    "chai": "~1.7.0",
+    "mocha": "~1.12.0"    
   }
 }
