--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "jellyjs-plugin-httpserver",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Jelly.js httpserver Plugin",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alex-min/jellyjs-plugin-httpserver.git"
+  },
   "keywords": [
     "framework",
     "web"
   ],
-  "repository" : {
-        "type" : "git",
-        "url" : "https://github.com/alex-min/jellyjs-plugin-httpserver.git"
-  },
   "author": "alex-min",
   "license": "MIT",
   "dependencies": {
     "express": "~3.3.1"
   },
-  "devDependencies":{
-    "jellyjs":"0.x.x",
+  "devDependencies": {
+    "jellyjs": "0.x.x",
     "chai": "~1.7.0",
-    "mocha": "~1.12.0"    
+    "mocha": "~1.12.0",
+    "request": "~2.22.0"
   }
 }
